# iot-hub-device-update

.github/workflows/: docker-build.yml
daemon/: CMakeLists.txt
scripts/: build.sh  install-deps.sh
scripts/docker/templates/: setup_container.sh
src/adu-shell/: CMakeLists.txt
src/adu-shell/inc/: adushell.hpp
src/adu-shell/src/: main.cpp  script_tasks.cpp
src/agent/adu_core_interface/src/: adu_core_interface.c
src/agent/src/: health_management.c
src/communication_managers/iothub_communication_manager/src/: iothub_communication_manager.c
src/extensions/extension_manager/tests/: CMakeLists.txt
src/platform_layers/linux_platform_layer/tests/: CMakeLists.txt  download_ut.cpp
src/rootkey_workflow/src/: rootkey_workflow.c
src/rootkey_workflow/tests/: CMakeLists.txt  main.cpp  rootkey_workflow_ut.cpp
src/utils/: CMakeLists.txt
src/utils/auto_utils/: CMakeLists.txt
src/utils/auto_utils/inc/aduc/: defer.hpp
src/utils/c_utils/tests/: CMakeLists.txt  c_utils_ut.cpp  connection_string_utils_ut.cpp
src/utils/config_utils/src/: config_utils.c
src/utils/config_utils/tests/: CMakeLists.txt  config_utils_ut.cpp  main.cpp
src/utils/contract_utils/tests/: CMakeLists.txt  contract_utils_ut.cpp
src/utils/crypto_utils/tests/: CMakeLists.txt  crypto_utils_ut.cpp
src/utils/d2c_messaging/: CMakeLists.txt
src/utils/d2c_messaging/src/: d2c_messaging.c
src/utils/d2c_messaging/tests/: CMakeLists.txt  (+1 more)
src/utils/download_file/: CMakeLists.txt  main.cpp
src/utils/jws_utils/: CMakeLists.txt
tools/download_file/: CMakeLists.txt  README.md  main.cpp
(+62 files in other folders)
